// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemLink should render correctly 1`] = `
<div>
  <a
    class="rmd-list-item rmd-list-item--clickable rmd-list-item--link"
    href="#"
  >
    <span
      class="rmd-ripple-container"
    />
  </a>
</div>
`;

exports[`ListItemLink should render correctly 2`] = `
<div>
  <a
    class="rmd-list-item rmd-list-item--clickable rmd-list-item--link rmd-list-item--medium"
    href="#"
  >
    <span
      class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
    >
      Left Icon
    </span>
    <span
      class="rmd-ripple-container"
    />
  </a>
</div>
`;
